add orders module

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,16 @@ DJANGO_SECRET_KEY=
 
 DB_DEFAULT=mysql://root:secret@127.0.0.1:3306/database_name
 
+# EMAIL
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT='587'
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=True
+DEFAULT_FROM_EMAIL=False
+
+# QUEUE AMQP
+RABBITMQ_HOST=localhost
+RABBITMQ_VHOST=
+RABBITMQ_USER=
+RABBITMQ_PASS=
